replace unmodifiable collections in FirefoxOptions.java